typescript/checker/tests/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            91,
        ),
        hi: BytePos(
            100,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/types/typeRelationships/assignmentCompatibility/nullAssignedToUndefined.ts:1:9
  |
1 | var x = undefined = null; // error
  |         ^^^^^^^^^

